<resources>
    <string name="app_name">CalcApp</string>
    <string name="welcome_in_calcapp">Welcome in CalcApp</string>
    <string name="lets_calc_something">Lets Calc something</string>
    <string name="functions">Functions</string>
    <string name="geometry">Geometry</string>
    <string name="geometry_pic">geometry_pic</string>
    <string name="function_pic">function_pic</string>
    <string name="quadratic">y=ax^2+bx+c</string>
    <string name="linear">y=ax+b</string>
    <string name="linear_tv">Linear</string>
    <string name="quadratic_tv">Quadratic</string>
    <string name="lack_zero_place">Lack zero place</string>
    <string name="function_constant">Function is constant 0</string>
    <string name="zero_place">X0 =</string>
    <string name="function_increasing">Function is increasing</string>
    <string name="function_decreasing">Function is decreasing</string>
    <string name="function_const">Function is constant</string>
    <string name="type_your_parameters">Type your parameters</string>
    <string name="type_parameter_a">Type parameter A</string>
    <string name="type_parameter_b">Type parameter B</string>
    <string name="calc">Calc</string>
    <string name="type_parameter_c">Type parameter C</string>
    <string name="lack_zero_x1">Lack zero places x1</string>
    <string name="lack_zero_x2">Lack zero places x2</string>
    <string name="not_quadratic_function">IT IS NO QUADRATIC FUNCTION</string>
    <string name="area">Area</string>
    <string name="volume">Volume</string>
</resources>
