<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuadraticFunction.QuadraticActivity"
    tools:ignore="Autofill"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/type_quadratic_param"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_your_parameters"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/param_quadratic_a"
        android:layout_width="match_parent"
        android:inputType="numberSigned|numberDecimal"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_quadratic_param"
        android:hint="@string/type_parameter_a"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textColorHint="@color/white"
        android:layout_margin="8dp"
        android:backgroundTint="@color/white"
        />
    <EditText
        android:id="@+id/param_quadratic_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/param_quadratic_a"
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/type_parameter_b"
        android:inputType="numberSigned|numberDecimal"
        />
    <EditText
        android:id="@+id/param_quadratic_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/param_quadratic_b"
        android:layout_margin="8dp"
        android:backgroundTint="@color/white"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/type_parameter_c"
        android:inputType="numberSigned|numberDecimal"
        />
    <Button
        android:id="@+id/button_quadratic_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@+id/param_quadratic_c"
        android:text="@string/calc"/>

    <TextView
        android:id="@+id/param_quadratic_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_quadratic_calc"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/function_quadratic_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/param_quadratic_result"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</RelativeLayout>