<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearFunction.LinearActivity"
    tools:ignore="Autofill"
    android:background="@drawable/gradient">

   <TextView
       android:id="@+id/param_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/white"
       android:textSize="22sp"
       android:text="@string/type_your_parameters"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/param_linear_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_parameter_a"
        android:textColor="@color/white"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="18sp"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"
        android:layout_margin="8dp"
        android:backgroundTint="@color/white"
        android:layout_below="@+id/param_tv"/>

    <EditText
        android:id="@+id/param_linear_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/type_parameter_b"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHighlight="@color/white"
        android:layout_margin="8dp"
        android:layout_below="@+id/param_linear_a"/>

    <Button
        android:id="@+id/button_linear_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_margin="8dp"
        android:layout_below="@+id/param_linear_b"/>


    <TextView
        android:id="@+id/param_linear_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_below="@id/button_linear_calc"
        android:layout_marginStart="8dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>
    
    <TextView
        android:id="@+id/function_linear_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/param_linear_result"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>






</RelativeLayout>