<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FunctionActivity"
    android:background="@drawable/gradient"
    android:weightSum="2"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/linear_card"
        android:layout_weight="1"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/card_background_dark"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

        <TextView
            android:id="@+id/linear_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/linear_tv"
            android:background="#495758"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear_tv"
            android:gravity="center"
            android:text="@string/linear"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#818A9B"
            android:textColor="@color/white"
            android:textSize="32sp"
            />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/quadratic_card"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/card_background_dark"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

            <TextView
                android:id="@+id/quadratic_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="#495758"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textSize="28sp"
                android:text="@string/quadratic_tv"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/quadratic_tv"
                    android:gravity="center"
                    android:text="@string/quadratic"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#818A9B"
                    android:textColor="@color/white"
                    android:textSize="32sp"/>

        </RelativeLayout>

        </androidx.cardview.widget.CardView>




</LinearLayout>