<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChoiceActivity"
    android:background="@drawable/gradient">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice_tv"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/choice_tv"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/geometry_card"
                android:clickable="true"
                android:layout_margin="8dp"
                android:elevation="2dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/card_background_dark"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/geometry"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:contentDescription="@string/geometry_pic"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/figures"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:id="@+id/function_card"
                android:clickable="true"
                app:cardElevation="2dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/card_background_dark"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:id="@+id/functions_tv"
                        android:text="@string/functions"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/functions_iv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/function_pic"
                        android:scaleType="fitXY"
                        android:src="@drawable/function" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>